--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@ alert('hej fra et script tag');
 
 
     <!-- Skriv javascript direkte i et script tag herunder -->
+<script> console.log('huraaa')</script>
+<script> alert('Hej fra et script tag');</script>
 
 
     <!-- Link HTMLlink.js her under -->
-
+<script src="assets/js/HEADlink.js"></script>
+<script src="assets/js/HTMLlink.js"></script>
 
 </body>
 
